# effective-potato

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/aggregations/: anomaly_records.parquet  monthly_sales_summary.parquet  region_wise_performance.parquet  top_categories.parquet  top_products_by_category.parquet
data/lookups/: common_categories.json  common_regions.json  region_map.json
data_dashboard/: __init__.py  app.py
data_pipeline/: __init__.py  settings.py
data_pipeline/aggregations/: __init__.py  build.py
data_pipeline/cleaning/: __init__.py  clean_sales_data.py
data_pipeline/generation/: __init__.py  constants.py  generate_ecommerce_data.py  product_generator.py  typo_utils.py
docs/: product_category_canonicalization_plan.md  product_name_normalization_plan.md
scripts/: __init__.py  build_aggregations.py  build_category_lookup.py  build_region_lookup.py  build_region_map.py  clean_data.py  dashboard.py  generate_data.py  update_lookups.py
tests/aggregations/: test_build.py
tests/cleaning/: test_clean_sales_data.py  test_date_parsing.py  test_duplicate_handling.py  test_na_region_e2e.py  test_region_canonicalization.py
tests/scripts/: test_build_region_map.py
